# raspi_project

client/: CMakeLists.txt  ClientNode.cpp
client/src/: SocketConLib.cpp
server/: CMakeLists.txt  ClientNode.cpp  DigitalIONode.cpp  GyroSensorNode.cpp  ServerNode.cpp
server/include/: DigSensorLib.h  GyroLib.h  KeypadLib.h  RelayLib.h  SocketConLib.h
server/src/: DigSensorLib.cpp  GyroLib.cpp  KeypadLib.cpp  RelayLib.cpp  SocketConLib.cpp  i2c.cpp
server/temp_cmake/keypadtest/: CMakeLists.txt  KeypadTest.cpp
server/temp_cmake/relaysensortest/: CMakeLists.txt  SensorRelayTest.cpp
